--- a/index.html
+++ b/index.html
@@ -15,6 +15,53 @@
 </head>
 
 <body>
+    <nav>
+        <div class="nav_top_buttons">
+            <a href="/" class="nav-link">
+                <div class="navbar_icon">
+                    <i class="fas fa-home"></i>
+                </div>
+                <div class="navbar_text">
+                    <span>Start</span>
+                </div>
+            </a>
+            <a href="/portfolio" class="nav-link">
+                <div class="navbar_icon">
+                    <i class="fas fa-briefcase"></i>
+                </div>
+                <div class="navbar_text">
+                    <span>Portfolio</span>
+                </div>
+
+            </a>
+            <a href="/about" class="nav-link">
+                <div class="navbar_icon">
+                    <i class="fas fa-user"></i>
+                </div>
+                <div class="navbar_text">
+                    <span>Über</span>
+                </div>
+            </a>
+            <a href="/contact" class="nav-link">
+                <div class="navbar_icon">
+                    <i class="fas fa-envelope"></i>
+                </div>
+                <div class="navbar_text">
+                    <span>Kontakt</span>
+                </div>
+            </a>
+        </div>
+        <div class="nav_bottom_buttons">
+            <a href="/" class="nav-link nav-bottom" id="theme-link">
+                <div class="navbar_icon">
+                    <i class="fas fa-adjust"></i>
+                </div>
+                <div class="navbar_text">
+                    <span>Dark</span>
+                </div>
+            </a>
+        </div>
+    </nav>
 </body>
 
 </html>
