--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
             </a>
         </div>
     </nav>
-    <main>
+    <main id="main">
     </main>
     <script src="/res/js/themes/themes.js"></script>
+    <script src="/res/js/shortcuts/shortcuts.js"></script>
 </body>
 
 </html>
