Add theme switching functionality again

--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
     <link rel="stylesheet" href="/res/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="/res/css/fonts.css">
     <link rel="stylesheet" href="/res/css/main.css">
+    <link rel="stylesheet" href="/res/css/theme.css">
 </head>
 
 <body>
-    <a href="#" class="nav-link nav-bottom" id="theme-link" onclick="cycleTheme();">
-        <div class="navbar_icon" id="theme-icon">
-            <div>
-                <i class="fas fa-adjust"></i>
-            </div>
-        </div>
-        <div class="navbar_text">
-            <span id="theme-name">Dark</span>
+    <a href="#" id="themeswitch" onclick="cycleTheme();">
+        <div>
+            <i class="fas fa-adjust"></i>
         </div>
     </a>
     <main>
