--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/res/css/fonts.css">
     <link rel="stylesheet" href="/res/css/main.css">
     <link rel="stylesheet" href="/res/css/theme.css">
+    <link rel="stylesheet" href="/res/css/grid.css">
 </head>
 
 <body>
@@ -21,6 +22,12 @@
         </div>
     </a>
     <main>
+        <div class="main-arrows"></div>
+        <div class="main-categories"></div>
+        <div class="main-mainview">
+            <div class="main-overview"></div>
+            <div class="main-slides"></div>
+        </div>
     </main>
     <script src="/res/js/themes/themes.js"></script>
 </body>
