Add category buttons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
         </div>
     </a>
     <main>
-        <div class="main-arrows"></div>
-        <div class="main-categories"></div>
+        <div class="main-categories">
+            <i class="fa-solid fa-house"></i>
+            <i class="fa-solid fa-user"></i>
+            <i class="fa-solid fa-bars-progress"></i>
+            <i class="fa-solid fa-graduation-cap"></i>
+            <i class="fa-solid fa-envelope"></i>
+        </div>
+        <div class="main-arrows">
+            <i class="fa-solid fa-angle-up"></i>
+            <i class="fa-solid fa-angle-down"></i>
+        </div>
         <div class="main-mainview">
             <div class="main-overview"></div>
             <div class="main-slides"></div>
