--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="/res/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="/res/css/fonts.css">
     <link rel="stylesheet" href="/res/css/main.css">
+    <link rel="stylesheet" href="/res/css/parameters.css">
     <link rel="stylesheet" href="/res/css/theme.css">
-    <link rel="stylesheet" href="/res/css/grid.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -21,21 +22,26 @@
             <i class="fas fa-adjust"></i>
         </div>
     </a>
+    <div class="arrows">
+        <i class="fa-solid fa-angle-up"></i>
+        <i class="fa-solid fa-angle-down"></i>
+    </div>
     <main>
-        <div class="main-categories">
-            <i class="fa-solid fa-house"></i>
-            <i class="fa-solid fa-user"></i>
-            <i class="fa-solid fa-bars-progress"></i>
-            <i class="fa-solid fa-graduation-cap"></i>
-            <i class="fa-solid fa-envelope"></i>
+        <div class="slide-full slide1 centerContent bold" id="slide-title">
+            CuzImBisonratte
         </div>
-        <div class="main-arrows">
-            <i class="fa-solid fa-angle-up"></i>
-            <i class="fa-solid fa-angle-down"></i>
+        <div class="slide-half slide2 centerContent" id="slide-aboutme">
+            <div>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, tempora commodi reiciendis quod ullam aliquid.
+            </div>
         </div>
-        <div class="main-mainview">
-            <div class="main-overview"></div>
-            <div class="main-slides"></div>
+        <div class="slide-full slide3" id="slide-work">
+            My work
+        </div>
+        <div class="slide-third slide4 centerChildren" id="slide-gh_stats">
+            <div>Lorem</div>
+            <div>Impsum</div>
+            <div>dolor</div>
         </div>
     </main>
     <script src="/res/js/themes/themes.js"></script>
